# tundra

./: .gitignore  .gitmodules  .travis.yml  CMakeBuildConfigTemplate.txt  CMakeLists.txt  CMakeOptionalModulesTemplate.txt  CMakeVS2008.bat  CMakeVS2010.bat  CMake_VS2008_X64.bat  CMake_VS2010.bat  CMake_VS2010_X64.bat  README  README.md  Readme_Kristalli.txt  WhatsNew.txt  cmake-vs2008-x64.bat  cmake-vs2008.bat  cmake.bat  cmake_vs2008.bat  cmake_vs2008_localizations.bat  cmake_vs2010.bat  makebuild.bat  makebuild_player.bat  makeclean.bat  mkdocs.yml  readme-linux.txt  readme.txt  realXtend-viewer.nsi  rexNG_VS2005.sln  rexNG_VS2008.sln  tundra-installer.nsi  viewer-installer.nsi  viewer_player-installer.nsi  win_cmake_vs2008.bat  win_cmake_vs2010.bat  win_make_build.bat  win_update_deps_vs2008.bat  win_update_deps_vs2010.bat
Application/: CMakeLists.txt  PreInit.h  main.cpp
CommunicationModule/: AudioDataProducerInterface.h  CMakeLists.txt  ChatMessage.cpp  ChatMessage.h  ChatMessageInterface.h  ChatSession.cpp  ChatSession.h  ChatSessionInterface.h  ChatSessionParticipantInterface.h  ChatSessionRequest.cpp  ChatSessionRequest.h  Communication.h  CommunicationEvents.cpp  CommunicationEvents.h  CommunicationManager.cpp  CommunicationManager.h  CommunicationManager_old.cpp  CommunicationManager_old.h  CommunicationModule.cpp  CommunicationModule.h  CommunicationModule.xml  CommunicationModuleApi.h  CommunicationModuleFwd.h  CommunicationServerConnection.cpp  CommunicationServerConnection.h  CommunicationService.cpp  CommunicationService.h  CommunicationServiceInterface.h  CommunicationSettings.cpp  CommunicationSettings.h  Connection.cpp  Connection.h  ConnectionInterface.h  ConnectionProviderInterface.h  ConsoleUI.cpp  ConsoleUI.h  Contact.cpp  Contact.h  ContactInterface.h  Credentials.cpp  (+65 more)
Core/: CMakeLists.txt  Color.h  ConversionUtils.cpp  ConversionUtils.h  Core.h  CoreAnyIterator.h  CoreCompileConfig.h  CoreDefines.h  CoreException.h  CoreMath.h  CoreModuleApi.h  CorePlatform.h  CorePlatformNix.h  CorePlatformWin.h  CoreStableHeaders.cpp  CoreStableHeaders.h  CoreStdIncludes.h  CoreStringUtils.cpp  CoreStringUtils.h  CoreThread.h  CoreTypes.h  Core_VS2005.vcproj  Core_VS2008.vcproj  DebugOperatorNew.h  HighPerfClock.h  IntervalTimer.h  LoggingFunctions.h  Matrix4.h  MemoryLeakCheck.h  QuatUtils.cpp  QuatUtils.h  Quaternion.cpp  Quaternion.h  StableHeaders.h  Transform.h  Vector3D.h  XMLUtilities.cpp
DebugStats/: CMakeLists.txt  DebugStats.cpp  DebugStats.h  DebugStats.xml  DebugStatsModule.xml  StableHeaders.h  TimeProfilerWindow.cpp  TimeProfilerWindow.h
DebugStatsModule/: CMakeLists.txt  DebugStats.cpp  DebugStats.h  DebugStatsModule.xml  DebugStatsModuleApi.h  GlobalAllocObject.h  ParticipantWindow.cpp  ParticipantWindow.h  Performance.cpp  Performance.h  StableHeaders.h  TimeProfilerWindow.cpp  TimeProfilerWindow.h
Foundation/: Application.cpp  Application.h  ApplicationInfo.h  ApplicationName.h  CMakeLists.txt  ComponentManager.cpp  ComponentManager.h  ConfigAPI.cpp  ConfigAPI.h  ConfigurationManager-templates.h  ConfigurationManager.cpp  ConfigurationManager.h  Console.cpp  Console.h  ConsoleAPI.cpp  ConsoleAPI.h  DebugAPI.cpp  DebugAPI.h  DebugApi.cpp  DebugApi.h  Declare_EC.h  Entity.h  EntityManager.cpp  EntityManager.h  EventManager-templates.h  EventManager.cpp  EventManager.h  ForwardDefines.h  Foundation.h  FoundationLogging.cpp  Frame.cpp  Frame.h  FrameAPI.cpp  FrameAPI.h  Framework.cpp  Framework.h  FrameworkQtApplication.cpp  FrameworkQtApplication.h  IModule.cpp  IModule.h  (+43 more)
GeometrySystem/: CMakeLists.txt  EC_Geometry.cpp  EC_Geometry.h  GeometrySystem.cpp  GeometrySystem.h  GeometrySystem_VS2005.vcproj  GeometrySystem_VS2008.vcproj  StableHeaders.h
Interfaces/: AssetInterface.h  AssetMetadataInterface.h  AssetProviderInterface.h  AssetReference.h  AssetServiceInterface.h  AttributeChangeType.h  AttributeInterface.cpp  AttributeInterface.h  CMakeLists.txt  CommunicationManagerServiceInterface.h  CommunicationServiceInterface.cpp  CommunicationServiceInterface.h  CommunicationsService.h  ComponentFactoryInterface.h  ComponentInterface.cpp  ComponentInterface.h  ComponentRegistrarInterface.h  ConsoleCommand.h  ConsoleCommandServiceInterface.h  ConsoleServiceInterface.h  EntityInterface.cpp  EntityInterface.h  EventDataInterface.h  GuiServiceInterface.h  GuiSystemInterface.h  IAttribute.cpp  IAttribute.h  IComponent.cpp  IComponent.h  IModule.cpp  IModule.h  IOpenSimSceneService.h  IService.h  ISoundService.h  InputServiceInterface.h  InputSystemInterface.h  Interfaces_VS2005.vcproj  Interfaces_VS2008.vcproj  LogListenerInterface.h  LoggingFunctions.h  (+35 more)
KristalliProtocolModule/: CMakeLists.txt  KristalliProtocolModule.cpp  KristalliProtocolModule.h  KristalliProtocolModule.xml  KristalliProtocolModuleApi.h  KristalliProtocolModuleEvents.h  UserConnection.cpp  UserConnection.h
NetTestLogicModule/: CMakeLists.txt  NetTestLogicModule.cpp  NetTestLogicModule.h  NetTestLogicModule.xml
OgreRenderingModule/: CAVEManager.cpp  CAVEManager.h  CAVESettingsWidget.cpp  CAVESettingsWidget.h  CAVEView.cpp  CAVEView.h  CAVEViewSettings.cpp  CAVEViewSettings.h  CAVEViewSettingsAdvanced.cpp  CAVEViewSettingsAdvanced.h  CMakeLists.txt  CaveSettings.ui  CaveSettingsDialogAdvanced.ui  CaveViewSettings.ui  CompositionHandler.cpp  CompositionHandler.h  EC_AnimationController.cpp  EC_AnimationController.h  EC_BillboardWidget.cpp  EC_BillboardWidget.h  EC_Camera.cpp  EC_Camera.h  EC_HoveringIconGroup.cpp  EC_HoveringIconGroup.h  EC_HoveringWidget.cpp  EC_HoveringWidget.h  EC_Light.cpp  EC_Light.h  EC_Material.cpp  EC_Material.h  EC_Mesh.cpp  EC_Mesh.h  EC_OgreAnimationController.cpp  EC_OgreAnimationController.h  EC_OgreCamera.cpp  EC_OgreCamera.h  EC_OgreCompositor.cpp  EC_OgreCompositor.h  EC_OgreConsoleOverlay.cpp  EC_OgreConsoleOverlay.h  (+104 more)
OpenSimProtocol/: BitStream.cpp  BitStream.h  BuddyList.cpp  BuddyList.h  CMakeLists.txt  INetMessageListener.h  Inventory.cpp  Inventory.h  InventoryAsset.cpp  InventoryAsset.h  InventoryEvents.h  InventoryFolder.cpp  NetMessage.h  (+51 more)
(+4371 files in other folders)
